@@ -19,7 +19,7 @@
 .\" Formatted or processed versions of this manual, if unaccompanied by
 .\" the source, must acknowledge the copyright and authors of this work.
 .\" License.
-.\" $Id: thctype.3,v 1.4 2006-08-01 11:46:57 thep Exp $
+.\" $Id: thctype.3,v 1.5 2006-08-02 05:10:08 thep Exp $
 .TH thctype 3 "Sep 14, 2001" "Thai Linux Working Group" "libthai's Manual"
 .SH NAME
 .B thctype related functions
@@ -539,8 +539,13 @@ Libthai has defined 4 levels for the position of a character.
 - Above level: a character is placed just above the final consonant.
 \fBth_chlevel\fR will return the value 1 for these characters.
 .br
-- Top level: this includes tonemarks and diacritics. Sometimes, a character in top level can be placed in above level if no character is there, for better looking.
+- Top level: this includes tone marks and diacritics. Sometimes, a character in top level can be placed in above level if no character is there, for better looking.
+-Top level: this includes tone marks and diacritics. For plain character cell rendering, it is safe to put these characters at top-most level. However, some rendering engines may lower them down on absence of character at Above level, for typographical quality.
 \fBth_chlevel\fR will return the value 2 for these characters.
+.sp
+There is an extra level value 3 for certain characters which are usually classified as characters at Above level, but are also allowed to be placed at Top level for some rare cases. Two characters fall in this category, namely MAITAIKHU and NIKHAHIT.
+.sp
+MAITAIKHU can be placed at Top level when writing some minority languages such as Kuy, to shorten some syllables with compound vowels, such as Sara Ia and Sara Uea. NIKHAHIT can be placed at Top level in Pali/Sanskrit words, to represent -ng final sound above SARA I.
 .sp
 The following figure illustrates a Thai word and characters' level.
 .sp
